@@ -1,8 +1,6 @@
 Installation
 ============
 
-.. todo:: convert from .md to .rst and bring in dfm's mac advice.
-
 Dependencies
 ************
 
@@ -30,116 +28,122 @@ Tips for installing dependencies on various operating systems
 
 On a Fedora/CentOS linux system, these dependencies can be installed as follows::
 
-sudo yum install make gcc gcc-c++ gcc-gfortran fftw3 fftw3-devel libgomp octave octave-devel
+  sudo yum install make gcc gcc-c++ gcc-gfortran fftw3 fftw3-devel libgomp octave octave-devel
 
 then see below for ``numdiff`` and ``mwrap``.
-(Note: not exactly sure how to install python3 and pip3 using yum)
 
-then download the latest `numdiff` from http://gnu.mirrors.pair.com/savannah/savannah/numdiff/ and set it up via `./configure; make; sudo make install`
+.. note::
 
-On Ubuntu linux (assuming python3 as opposed to python):
+   we are not exactly sure how to install python3 and pip3 using yum
 
-```
-sudo apt-get install make build-essential libfftw3-dev gfortran numdiff python3 python3-pip octave liboctave-dev
-```
+then download the latest ``numdiff`` from http://gnu.mirrors.pair.com/savannah/savannah/numdiff/ and set it up via ``./configure; make; sudo make install``
+
+On Ubuntu linux (assuming python3 as opposed to python)::
+
+  sudo apt-get install make build-essential libfftw3-dev gfortran numdiff python3 python3-pip octave liboctave-dev
 
 On Mac OSX:
 
-Make sure you have `make` installed, eg via XCode.
+Make sure you have ``make`` installed, eg via XCode.
 
 Install gcc, for instance using pre-compiled binaries from
 http://hpc.sourceforge.net/
 
-Install homebrew from http://brew.sh
+Install homebrew from http://brew.sh::
 
-`brew install fftw`
+  brew install fftw
 
-Install `numdiff` as below.
+Install ``numdiff`` as below.
 
 (Note: we are not exactly sure how to install python3 and pip3 on mac)
 
-Currently in Mac OSX, `make lib` fails to make the shared object library (.so);
+Currently in Mac OSX, ``make lib`` fails to make the shared object library (.so);
 however the static (.a) library is of reasonable size and works fine.
 
 
-### Installing numdiff
+Installing numdiff
+------------------
 
-[`numdiff`](http://www.nongnu.org/numdiff) by Ivano Primi extends `diff` to assess errors in floating-point outputs.
-Download the latest `numdiff` from the above URL, un-tar the package, cd into it, then build via `./configure; make; sudo make install`
+`numdiff <http://www.nongnu.org/numdiff>`_ by Ivano Primi extends ``diff`` to assess errors in floating-point outputs.
+Download the latest ``numdiff`` from the above URL, un-tar the package, cd into it, then build via ``./configure; make; sudo make install``
 
-### Installing MWrap
+Installing MWrap
+----------------
 
-[MWrap](http://www.cs.cornell.edu/~bindel/sw/mwrap)
+`MWrap <http://www.cs.cornell.edu/~bindel/sw/mwrap>`_
 is a very useful MEX interface generator by Dave Bindel.
-Make sure you have `flex` and `bison` installed.
-Download version 0.33 or later from http://www.cs.cornell.edu/~bindel/sw/mwrap, un-tar the package, cd into it, then
-```
-make
-sudo cp mwrap /usr/local/bin/
-```
+Make sure you have ``flex`` and ``bison`` installed.
+Download version 0.33 or later from http://www.cs.cornell.edu/~bindel/sw/mwrap, un-tar the package, cd into it, then::
+  
+  make
+  sudo cp mwrap /usr/local/bin/
 
 Compilation
 ***********
 
-Compile and test FINUFFT via
+Compile and test FINUFFT via::
 
-`make test`
+  make test
 
-or
+or, to use all available cores::
 
-`make test -j` to use all available cores.
+  make test -j
 
 This should compile the main libraries then run tests which should report zero crashes and zero fails. (If numdiff was not installed, it instead produces output that you will have to check by eye matches the requested accuracy.)
-If you have an error then `cp makefile makefile.local`,
-edit `makefile.local` to adjust compiler and other library options,
-and use `make -f makefile.local test`.
-Run `make` without arguments for full list of possible make tasks.
+If you have an error then ``cp makefile makefile.local``,
+edit ``makefile.local`` to adjust compiler and other library options,
+and use ``make -f makefile.local test``.
+Run ``make`` without arguments for full list of possible make tasks.
 
-If there is an error in testing, consider filing a bug report; see [README](README.md)
+If there is an error in testing, consider filing a bug report as a New
+Issue at https://github.com/ahbarnett/finufft/issues
 
-### Building examples and wrappers
 
-`make examples` to compile and run the examples for calling from C++ and from C.
+Building examples and wrappers
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-The `examples` and `test` directories are good places to see usage examples.
+``make examples`` to compile and run the examples for calling from C++ and from C.
 
-`make fortran` to compile and run the fortran wrappers and examples.
+The ``examples`` and ``test`` directories are good places to see usage examples.
 
-`make matlab` to build the MEX interface to matlab.
+``make fortran`` to compile and run the fortran wrappers and examples.
 
-`make octave` to build the MEX-like interface to octave.
+``make matlab`` to build the MEX interface to matlab.
 
-### Building the python or python3 wrappers
+``make octave`` to build the MEX-like interface to octave.
 
-First make sure you have python3 and pip3 (or python and pip) installed and that you have already compiled the C++ code (make lib). Then do the following
 
-```
-cd finufft
-pip3 install numpy
-pip3 install .
-```
+Building the python wrappers
+****************************
 
-You can then run the tests as follows:
+First make sure you have python3 and pip3 (or python and pip) installed and that you have already compiled the C++ library (eg via ``make lib``). Next make
+sure you have NumPy installed::
+  
+  pip3 install numpy
 
-```
-cd finufft/python_tests
-python3 demo1d1.py
-python3 run_accuracy_tests.py
-python3 run_speed_tests.py
-```
+Then do the following from the main ``finufft`` install directory::
+
+  pip3 install .
+
+You can then run the tests as follows::
+
+  cd python_tests
+  python3 demo1d1.py
+  python3 run_accuracy_tests.py
+  python3 run_speed_tests.py
 
 In all of the above the "3" can be omitted if you want to work with python v2.
 
-See also Dan Foreman-Mackey's earlier repo that also wraps finufft, and from which we have drawn code: [python-finufft](https://github.com/dfm/python-finufft)
+See also Dan Foreman-Mackey's earlier repo that also wraps finufft, and from which we have drawn code: `python-finufft <https://github.com/dfm/python-finufft>`_
 
-### A few words about python environments
 
-There can be confusion and conflicts between various versions of python and installed packages. It is therefore a very good idea to use virtual environments. Here's a simple way to do it (after installing python-virtualenv):
+A few words about python environments
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-```
-Open a terminal
-virtualenv -p /usr/bin/python3 env1
-. env1/bin/activate
-```
+There can be confusion and conflicts between various versions of python and installed packages. It is therefore a very good idea to use virtual environments. Here's a simple way to do it (after installing python-virtualenv)::
 
-Now you are in a virtual environment that starts from scratch. All pip installed packages will go inside the env1 directory. (You can get out of the environment by typing 'deactivate')
+  Open a terminal
+  virtualenv -p /usr/bin/python3 env1
+  . env1/bin/activate
+
+Now you are in a virtual environment that starts from scratch. All pip installed packages will go inside the env1 directory. (You can get out of the environment by typing ``deactivate``)
