@@ -3,7 +3,7 @@
 //
 // Warning: users should not call the below-defined routines
 // finufftpy.finufftpy_cpp.* from python.
-// Rather, they should call finufftpy.finufftpy?d?  which are documented in
+// Rather, they should call finufftpy.nufftpy?d?  which are documented in
 // _interfaces.py
 
 #include <pybind11/pybind11.h>
