@@ -107,6 +107,6 @@ setup(
     packages=['finufftpy'],
     install_requires=['numpy','pybind11>=2.2'],
     cmdclass={'build_ext': BuildExt},
-    zip_safe=False,
+    zip_safe=False
 )
 
